Add comment in portuguese regarding email contact

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -209,7 +209,7 @@ pt:
     -
       link: 'Contato'
       title: 'Contato'
-      content: '<p>Caso tenha alguma dúvida ou queira obter mais informações sobre o Projeto O Futuro da Conservação, por favor, entre em contato através do seguinte e-mail: <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a></p>'
+      content: '<p>Caso tenha alguma dúvida ou queira obter mais informações sobre o Projeto O Futuro da Conservação, por favor, entre em contato através do seguinte e-mail: <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a>. Infelizmente, somente podemos responder aos emails enviados em inglês ou espanhol.</p>'
     -
       link: 'FAQs'
       title: 'FAQs'
