Add missing translation

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -418,8 +418,8 @@ pt:
       image_alt: 'Market ecocentrism chart'
       caption: 'Figura 4: Ecocentrismo de mercado. Os círculos brancos representam o ponto neutro de cada uma das dimensões (o resultado obtido respondendo "não concordo nem discordo" para todas as afirmações), e a linha pontilhada representa o resultado médio de cada dimensão para 9.264 pessoas que trabalham com a conservação de 149 países. As linhas mais claras representam as pontuações para todos os 9.264 entrevistados, e a área roxa representa o espaço conceitual em que é mais provável que se encontrem os ecocentristas.'
     -
-      link: 'Bibliography'
-      title: 'Bibliography'
+      link: 'Referências bibliográficas'
+      title: 'Referências bibliográficas'
       content: '<p><em>Nova Conservação:</em></p>
       <ul class="static-page__bibliography-list">
       <li>“Conservation in the Anthropocene -- Beyond Solitude and Fragility.” Accessed February 24, 2015. http://thebreakthrough.org/index.php/journal/past-issues/issue-2/conservation-in-the-anthropocene.
