Add more translations

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -191,11 +191,11 @@ pt:
       title: 'Sobre a equipe'
       content: '<p>As seguintes pessoas criaram juntos este site e os projetos de pesquisa relacionados:
       <ul>
-      <li><a href="http://www.geog.cam.ac.uk/people/sandbrook/" title="Visit the profile of Chris Sandbrook">Chris Sandbrook (University of Cambridge)</a></li>
-      <li><a href="http://www.see.leeds.ac.uk/people/g.holmes" title="Visit the profile of George Holmes">George Holmes (University of Leeds)</a></li>
+      <li><a href="http://www.geog.cam.ac.uk/people/sandbrook/" title="Visite o perfil de Chris Sandbrook">Chris Sandbrook (University of Cambridge)</a></li>
+      <li><a href="http://www.see.leeds.ac.uk/people/g.holmes" title="Visite o perfil de George Holmes">George Holmes (University of Leeds)</a></li>
       <li><a href="http://www.geos.ed.ac.uk/homes/jfisher2/">Janet Fisher (University of Edinburgh)</a></li>
       <li><a href="https://www.geog.cam.ac.uk/people/luque-lora/">Rogelio Luque-Lora (University of Cambridge)</a></li>
-      <li><a href="https://www.ed.ac.uk/geosciences/people?indv=4057" title="Visit the profile of Aidan Keane">Aidan Keane (University of Edinburgh)</a></li>
+      <li><a href="https://www.ed.ac.uk/geosciences/people?indv=4057" title="Visite o perfil de Aidan Keane">Aidan Keane (University of Edinburgh)</a></li>
       </ul>
       The website is hosted by the <a href="https://www.unep-wcmc.org" title="Visit the UN Environment World Conservation Monitoring Centre website">UN Environment World Conservation Monitoring Centre.</a><p>'
     -
@@ -209,7 +209,7 @@ pt:
     -
       link: 'Contato'
       title: 'Contato'
-      content: '<p>Caso tenha alguma dúvida ou queira obter mais informações sobre o Projeto O Futuro da Conservação, por favor, entre em contato através do seguinte e-mail: <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a>. Infelizmente, somente podemos responder aos emails enviados em inglês ou espanhol.</p>'
+      content: '<p>Caso tenha alguma dúvida ou queira obter mais informações sobre o Projeto O Futuro da Conservação, por favor, entre em contato através do seguinte e-mail: <a href="mailto:futureofconservation@gmail.com" title="Envie um e-mail ao Futuro da Conservação">futureofconservation@gmail.com</a>. Infelizmente, somente podemos responder aos emails enviados em inglês ou espanhol.</p>'
     -
       link: 'FAQs'
       title: 'FAQs'
@@ -227,13 +227,13 @@ pt:
         -
           title: 'Q: This is an exercise that oversimplifies the debate and is fundamentally reductive.'
           content: '<p>A: We recognize that this is a relatively reductionist way of examining the issues, but we propose (and much of the feedback we’ve had indicates) that it is still useful to show the range of issues and allow people to explore one characterization of their position compared with those of other conservationists. In this particular research, we have prioritized breadth over depth: we were acutely aware that people would be less responsive to a survey taking more than roughly 15 minutes to complete, hence the choice to work with quantitative data related to pre-prepared statements that people could respond to relatively intuitively using a simple spectrum of agreement. We have now launched a version of the survey which can be taken internally by <a href="/about-go-fox" title="Visit the About Go-FOX page">groups and organisations</a>, with the survey serving as platform for more nuanced and detailed discussion.</p>
-          <p>We recognise that the three axes presented in the figure on the results page do not cover the full breadth of issues at stake in debates about the future of conservation, and indeed many of the questions in the survey do not contribute to respondents’ scores on these axes. This is why we have included an open question at the end of the survey, which asks respondents to contribute other issues which they think are pertinent to the future of conservation, but which were not at the time included in the survey. If there are other issues which you would like to see included in the survey, that is the place to suggest them (if you have already taken the survey, feel free to get in touch with us directly: <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a>).</p>'
+          <p>We recognise that the three axes presented in the figure on the results page do not cover the full breadth of issues at stake in debates about the future of conservation, and indeed many of the questions in the survey do not contribute to respondents’ scores on these axes. This is why we have included an open question at the end of the survey, which asks respondents to contribute other issues which they think are pertinent to the future of conservation, but which were not at the time included in the survey. If there are other issues which you would like to see included in the survey, that is the place to suggest them (if you have already taken the survey, feel free to get in touch with us directly: <a href="mailto:futureofconservation@gmail.com" title="Envie um e-mail ao Futuro da Conservação">futureofconservation@gmail.com</a>).</p>'
         -
           title: 'Q: The wording of some of the questions is problematic, making it difficult to know how to answer.'
           content: '<p>A: The survey went through a lengthy period of testing, but like all social surveys, we accept that not all the statements are perfect and that some people will dislike some of them. It is important to note that as the survey was intended to discover how conservationists responded to the points made in the new conservation debate in the literature. Many of the statements are direct quotes from published articles in that debate.</p>'
         -
           title: 'Q: Isn’t this just an academic exercise? What difference can it make?'
-          content: '<p>A: We certainly want this survey to be more than just an academic exercise, and we see it as one stage of a process rather than an end in itself. We are delighted that it has already stimulated so much debate, and think that this is in itself very useful for the conservation community. At the request of several conservation NGOs, we have also developed <a href="/about-go-fox" title="Visit the About Go-FOX page">GO-FOX</a>, a version of the survey which can be run for a defined group, like colleagues within an organisation or a student cohort. We have so far received very positive feedback from the organisations involved, in terms of encouraging internal debate and informing strategic planning. We would be delighted to hear from you at <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a> if you would be interested to take part.</p>'
+          content: '<p>A: We certainly want this survey to be more than just an academic exercise, and we see it as one stage of a process rather than an end in itself. We are delighted that it has already stimulated so much debate, and think that this is in itself very useful for the conservation community. At the request of several conservation NGOs, we have also developed <a href="/about-go-fox" title="Visit the About Go-FOX page">GO-FOX</a>, a version of the survey which can be run for a defined group, like colleagues within an organisation or a student cohort. We have so far received very positive feedback from the organisations involved, in terms of encouraging internal debate and informing strategic planning. We would be delighted to hear from you at <a href="mailto:futureofconservation@gmail.com" title="Envie um e-mail ao Futuro da Conservação">futureofconservation@gmail.com</a> if you would be interested to take part.</p>'
         -
           title: 'Q: Can this survey be run for just my group / organisation?'
           content: '<p>A: Several groups have already approached us asking for a closed survey for only their group, and we have responded to the demand by creating <a href="/about-go-fox" title="Visit the About Go-FOX page" title="About Go-Fox">GO-FOX</a>, a separate version of the survey which can be run internally within a group or organisation.</p>'
@@ -312,8 +312,8 @@ pt:
       </p>
       '
     -
-      link: 'Analysing your results'
-      title: 'Analysing your results'
+      link: 'Analisar os seus resultados'
+      title: 'Analisar os seus resultados'
       content: '
       <p>
       When you are ready to analyse the results of your group, you can download the full data file by clicking on the “CSV” button on the “Surveys” page. Save this file wherever you choose, and then click on the “GO-FOX analysis site” button on the same page. This will open the GO-FOX analysis website in a new tab. The site will open on the “Upload your data” page. Click the “Browse” button and then choose your data file from its saved location. You are then ready to explore your results by navigating through the various tabs on the left hand side of the page.
@@ -375,7 +375,7 @@ pt:
   about_debate:
     -
       link: 'About the debate'
-      title: 'About the Future of Conservation debate'
+      title: 'Sobre o Futuro da Conservação'
       content: '<p>Embora os debates sobre os objetivos e métodos utilizados para a conservação sejam provavelmente tão antigos quanto a própria conservação, o debate sobre a “nova conservação” é recente e foi estimulado por um artigo de Kareiva e Marvier (2012), intitulado <a href="https://academic.oup.com/bioscience/article/62/11/962/263056" title="Visit the ‘What is conservation science’ paper" target="_blank">‘What is conservation science?’</a> (O que ciência da conservação?).</p>
       <p>Dois pontos de vista proeminentes emergiram nesse debate, o de Kareiva e Marvier, que eles chamaram de "nova conservação", e um ponto de vista oposto que nós chamamos de "conservação tradicional". Nossa pesquisa emergiu da preocupação de que essas duas posições não descrevem adequadamente a gama de pontos de vista de pessoas que trabalham com a conservação em todo o mundo.</p>
       <p>A nova e a tradicional posições de conservação podem ser diferenciadas por seus pontos de vista sobre o papel da “conservação centrada nas pessoas” (relacionada ao papel que as pessoas devem desempenhar na conservação), “ecocentrismo científico” (relacionado ao papel da ciência na conservação de espécies e ecossistemas) e “conservação através do capitalismo” (relacionado ao papel das corporações e abordagens baseadas no mercado para a conservação).</p>
