Fix mistake in portuguese yml file

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -153,11 +153,9 @@ pt:
         image_class: 'gofox'
       -
         title: 'Pesquisa e publicações'
-        description: "
-        <p>
+        description: "<p>
         Os dados da Pesquisa do Futuro da Conservação têm sido analisados com o objetivo de identificar os valores de pessoas que trabalham com a conservação, e como estes variam dependendo de suas características (por exemplo, nacionalidade, profissão e experiência de trabalho em diferentes ecossistemas). <a href='https://www.nature.com/articles/s41893-019-0267-5' title='foi publicado na revista Nature Sustainability' target='_blank'>O primeiro artigo resultante desta pesquisa</a> foi publicado na revista Nature Sustainability. <a href='https://wordpress.com/post/thinkinglikeahuman.com/458' title=\"A versão do artigo aceito\" target='_blank'>A versão do artigo aceito</a> também está disponível em Acesso Aberto. Seguimos realizando análises utilizando os dados coletados através desta página, e esperamos continuar divulgando os resultados dentro da comunidade de pessoas que trabalham com a conservação.
-        </p>
-        <p>"
+        </p>"
 
   survey_warning:
       title: 'Bem-vindo à Pesquisa do Futuro da Conservação'
