Add further translations

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -52,18 +52,18 @@ pt:
     "Social sciences (e.g. economics, human geography, political science)": "Social sciences (e.g. economics, human geography, political science)"
     "Humanities (e.g. literature, history, philosophy, languages)": "Humanities (e.g. literature, history, philosophy, languages)"
     "Interdisciplinary (a combination of at least two of natural science, social science and humanities)": "Interdisciplinary (a combination of at least two of natural science, social science and humanities)"
-    "Not applicable": "Not applicable"
+    "Not applicable": "Não se aplica"
     "Academia/educational institution": "Academia/educational institution"
     "Not for profit/non governmental organisation": "Not for profit/non governmental organisation"
     "Private sector": "Private sector"
     "Government": "Government"
     "Yes": "Sim"
     "No": "Não"
-    "Exclusively a researcher": "Exclusively a researcher"
-    "Mostly a researcher": "Mostly a researcher"
-    "Both a researcher and practitioner": "Both a researcher and practitioner"
-    "Mostly a practitioner": "Mostly a practitioner"
-    "Exclusively a practitioner": "Exclusively a practitioner"
+    "Exclusively a researcher": "Exclusivamente um pesquisador"
+    "Mostly a researcher": "Principalmente um pesquisador"
+    "Both a researcher and practitioner": "Tanto um pesquisador quanto um praticante"
+    "Mostly a practitioner": "Principalmente um praticante"
+    "Exclusively a practitioner": "Exclusivamente um praticante"
     "Very junior position": "Very junior position"
     "Fairly junior position": "Fairly junior position"
     "Neither senior nor junior position": "Neither senior nor junior position"
