--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -64,11 +64,11 @@ pt:
     "Both a researcher and practitioner": "Tanto um pesquisador quanto um praticante"
     "Mostly a practitioner": "Principalmente um praticante"
     "Exclusively a practitioner": "Exclusivamente um praticante"
-    "Very junior position": "Very junior position"
-    "Fairly junior position": "Fairly junior position"
-    "Neither senior nor junior position": "Neither senior nor junior position"
-    "Fairly senior position": "Fairly senior position"
-    "Very senior position": "Very senior position"
+    "Very junior position": "Posição muito júnior"
+    "Fairly junior position": "Posição relativamente júnior"
+    "Neither senior nor junior position": "Nem sênior nem júnior"
+    "Fairly senior position": "Posição relativamente senior"
+    "Very senior position": "Posição muito sênior"
     "I am not currently working in conservation": "I am not currently working in conservation"
     "Very heavily modified ecosystems (e.g. urban areas)": "Very heavily modified ecosystems (e.g. urban areas)"
     "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)": "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)"
