Add more translations regarding career path

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -69,12 +69,12 @@ pt:
     "Neither senior nor junior position": "Nem sênior nem júnior"
     "Fairly senior position": "Posição relativamente senior"
     "Very senior position": "Posição muito sênior"
-    "I am not currently working in conservation": "I am not currently working in conservation"
-    "Very heavily modified ecosystems (e.g. urban areas)": "Very heavily modified ecosystems (e.g. urban areas)"
-    "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)": "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)"
-    "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)": "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)"
-    "Largely unmodified ecosystems (e.g. sustainable use area)": "Largely unmodified ecosystems (e.g. sustainable use area)"
-    "Unmodified or very little modified ecosystem (e.g. wilderness areas)": "Unmodified or very little modified ecosystem (e.g. wilderness areas)"
+    "I am not currently working in conservation": "Eu não estou trabalhando atualmente com conservação"
+    "Very heavily modified ecosystems (e.g. urban areas)": "Ecossistemas fortemente modificados (por exemplo, áreas urbanas)"
+    "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)": "Ecossistemas amplamente modificados (por exemplo, terras agrícolas intensivas, pescarias intensivas)"
+    "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)": "Ecossistemas pouco modificados (por exemplo, agricultura e pesca de baixa intensidade)"
+    "Largely unmodified ecosystems (e.g. sustainable use area)": "Ecossistemas em grande parte não modificados (por exemplo, área de uso sustentável)"
+    "Unmodified or very little modified ecosystem (e.g. wilderness areas)": "Ecossistema não modificado ou muito pouco modificado (por exemplo, áreas selvagens)"
     "Yes, as a researcher": "Yes, as a researcher"
     "Yes, as a practitioner": "Yes, as a practitioner"
     "Yes, both as a researcher and as a practitioner": "Yes, both as a researcher and as a practitioner"
