Add more translations regarding career path

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -75,9 +75,9 @@ pt:
     "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)": "Ecossistemas pouco modificados (por exemplo, agricultura e pesca de baixa intensidade)"
     "Largely unmodified ecosystems (e.g. sustainable use area)": "Ecossistemas em grande parte não modificados (por exemplo, área de uso sustentável)"
     "Unmodified or very little modified ecosystem (e.g. wilderness areas)": "Ecossistema não modificado ou muito pouco modificado (por exemplo, áreas selvagens)"
-    "Yes, as a researcher": "Yes, as a researcher"
-    "Yes, as a practitioner": "Yes, as a practitioner"
-    "Yes, both as a researcher and as a practitioner": "Yes, both as a researcher and as a practitioner"
+    "Yes, as a researcher": "Sim, como pesquisador"
+    "Yes, as a practitioner": "Sim, como praticante"
+    "Yes, both as a researcher and as a practitioner": "Sim, tanto como pesquisador quanto como praticante"
     "Values of family and friends during childhood": "Values of family and friends during childhood"
     "Values of family and friends during adulthood": "Values of family and friends during adulthood"
     "Outdoor play/recreation during childhood": "Outdoor play/recreation during childhood"
