Add translations regarding values of family and friends

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -78,8 +78,8 @@ pt:
     "Yes, as a researcher": "Sim, como pesquisador"
     "Yes, as a practitioner": "Sim, como praticante"
     "Yes, both as a researcher and as a practitioner": "Sim, tanto como pesquisador quanto como praticante"
-    "Values of family and friends during childhood": "Values of family and friends during childhood"
-    "Values of family and friends during adulthood": "Values of family and friends during adulthood"
+    "Values of family and friends during childhood": "Valores da família e amigos durante a infância"
+    "Values of family and friends during adulthood": "Valores da família e amigos durante a vida adulta"
     "Outdoor play/recreation during childhood": "Outdoor play/recreation during childhood"
     "Outdoor play/recreation during adulthood": "Outdoor play/recreation during adulthood"
     "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood"
