--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -80,8 +80,8 @@ pt:
     "Yes, both as a researcher and as a practitioner": "Sim, tanto como pesquisador quanto como praticante"
     "Values of family and friends during childhood": "Valores da família e amigos durante a infância"
     "Values of family and friends during adulthood": "Valores da família e amigos durante a vida adulta"
-    "Outdoor play/recreation during childhood": "Outdoor play/recreation during childhood"
-    "Outdoor play/recreation during adulthood": "Outdoor play/recreation during adulthood"
+    "Outdoor play/recreation during childhood": "Atividades ao ar livre / recreação durante a infância"
+    "Outdoor play/recreation during adulthood": "Atividades ao ar livre / recreação durante a vida adulta"
     "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood"
     "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during adulthood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during adulthood"
     "Formal education experience (e.g. field trip, classroom session) during childhood": "Formal education experience (e.g. field trip, classroom session) during childhood"
