Added several translations regarding various sectors

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -53,10 +53,10 @@ pt:
     "Humanities (e.g. literature, history, philosophy, languages)": "Humanities (e.g. literature, history, philosophy, languages)"
     "Interdisciplinary (a combination of at least two of natural science, social science and humanities)": "Interdisciplinary (a combination of at least two of natural science, social science and humanities)"
     "Not applicable": "Não se aplica"
-    "Academia/educational institution": "Academia/educational institution"
-    "Not for profit/non governmental organisation": "Not for profit/non governmental organisation"
-    "Private sector": "Private sector"
-    "Government": "Government"
+    "Academia/educational institution": "Academia / instituição de ensino"
+    "Not for profit/non governmental organisation": "Sem fins lucrativos / organização não governamental"
+    "Private sector": "Setor privado"
+    "Government": "Governo"
     "Yes": "Sim"
     "No": "Não"
     "Exclusively a researcher": "Exclusivamente um pesquisador"
