Add translations regarding the background to the project

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -358,9 +358,9 @@ pt:
 
   about_go_fox:
     -
-      link: 'Background'
-      title: 'Background'
-      content: '<p>The launch of the Future of Conservation Survey in 2017 triggered a series of requests from conservation organisations to be able to use the survey as an internal tool to characterise the range of views within groups and organisations. In response to these requests, we have created the Group and Organisation Future of Conservation Survey (GO-FOX).</p>
+      link: 'Histórico/ Contexto'
+      title: 'Histórico/ Contexto'
+      content: '<p>O lançamento da Pesquisa O Futuro da Conservação em 2017 suscitou uma série de pedidos de organizações de conservação para poder usar a pesquisa como uma ferramenta interna para caracterizar os diversos pontos de vista dentro de grupos e organizações. Em resposta à essas solicitações, criamos a Pesquisa do Futuro da Conservação para Grupos e a Organizações (GO-FOX, pelas siglas em inglês).</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/bZdwQAG-xI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p>The GO-FOX tool allows the user to create their own unique version of the Future of Conservation Survey and distribute it to a closed group of respondents they are working with. Analysed survey results from this group are then made available to the GO-FOX user, who can then use them for the benefit of the group. Examples of how GO-FOX may be used include, but are not limited to:</p>
       <ul>
